--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.befit">
+    package="com.hdmdmi.befit">
    <application
         android:label="befit"
         android:icon="@mipmap/ic_launcher">
