--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
+  syncfusion_flutter_charts: ^19.1.66+1
   height_slider: ^1.4.0-nullsafety+1
   liquid_progress_indicator_ns: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  change_app_package_name: ^1.0.0
 
 dev_dependencies:
   flutter_test:
